@@ -7,10 +7,11 @@ import forge.card.CardRules;
 import forge.card.CardSplitType;
 import forge.item.IPaperCard;
 import forge.item.PaperCard;
+import forge.item.PaperToken;
+import forge.token.TokenDb;
 import org.apache.commons.lang3.StringUtils;
 
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
@@ -48,6 +49,43 @@ public class ImageUtil {
         // return cp regardless if it's null
         return cp;
     }
+
+    public static PaperToken getPaperTokenFromImageKey(final String imageKey) {
+        String key;
+        if (imageKey == null ||
+            !imageKey.startsWith(ImageKeys.TOKEN_PREFIX)) {
+            return null;
+        }
+
+        key = imageKey.substring(ImageKeys.TOKEN_PREFIX.length());
+            
+        if (key.isEmpty()) {
+            return null;
+        }
+
+        TokenDb db = StaticData.instance().getAllTokens();
+        if (db == null) {
+            return null;
+        }
+        
+        String[] split = key.split("\\|");
+        if (!db.containsRule(split[0])) {
+            return null;
+        }
+        
+        PaperToken pt = switch (split.length) {
+            case 1 -> db.getToken(split[0]);
+            case 2, 3 -> db.getToken(split[0], split[1]);
+            default -> db.getToken(split[0], split[1], Integer.parseInt(split[3]));
+        };
+
+        if (pt == null) {
+            System.err.println("Can't find PaperToken from key: " + key);
+        }
+            
+        return pt;
+    }
+
     public static String transformKey(String imageKey) {
         String key;
         String edition= imageKey.substring(0, imageKey.indexOf("/"));
@@ -206,7 +244,17 @@ public class ImageUtil {
             faceParam = "&face=back";
             cardCollectorNumber = cardCollectorNumber.substring(0, cardCollectorNumber.length() - 1);
         }
-        return String.format("%s/%s/%s?format=image&version=%s%s", editionCode, URLEncoder.encode(cardCollectorNumber, StandardCharsets.UTF_8),
+
+        String cardCollectorNumberEncoded;
+        try {
+            cardCollectorNumberEncoded = URLEncoder.encode(cardCollectorNumber, "UTF-8");
+        } catch (Exception e) {
+            // Unlikely, for the possibility that "UTF-8" is not supported.
+            System.err.println("UTF-8 encoding not supported on this device.");
+            cardCollectorNumberEncoded = cardCollectorNumber;
+        }
+
+        return String.format("%s/%s/%s?format=image&version=%s%s", editionCode, cardCollectorNumberEncoded,
                 langCode, versionParam, faceParam);
     }
 
